--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -26,7 +26,8 @@
   .ui-chat-container { width: auto; left: 0; padding-left: 20px; }
 }
 
-.chat_body{ flex: 1;background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png');background-repeat: repeat;background-position: center;padding: 30px;overflow: scroll;}
+//.chat_body{ flex: 1;background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png');background-repeat: repeat;background-position: center;padding: 30px;overflow: scroll;}
+.chat_body{ flex: 1;background-image: url('/img/background/bg-3.jpg');background-repeat: repeat;background-position: center;padding: 30px;overflow: scroll;}
 .chat_message{position: relative;font-size:16px;padding: 10px;border-radius: 10px; background-color: #fff;margin-bottom: 30px;max-width:70%;}
 .chat_messageAuthor{position:absolute;top:-15px;font-size: xx-small;font-weight: 800;}
 .chat_messageBodyMetaTimeStamp{ margin-left:10px;font-size: xx-small; color: grey;}
