--- a/views/index.html
+++ b/views/index.html
@@ -30,26 +30,111 @@
 					</div>
 				</div>
             </div>
-
 			<div class="tab_menu">
 				<div class="single_tab active">CHATS</div>
 				<div class="single_tab">GROUPS</div>
 				<div class="single_tab">STATUS</div>
 				<div class="single_tab">CALLS</div>
 			</div>
-            
         </div>
-		<div class="messages_section dragscroll">
+		<div data---="viewbox__null__scrollbar:1;parent:.messages_section;scrollbarshadow:1" class="messages_section dragscroll">
 			<div class="single_chat">
 				<div class="image_container">
 					<img src="/img/profiles/agape.jpg">
 				</div>
-				<div class="content_container_inner">
-				 		<p class="user_name"> <name>Agape Raston</name> <span>07:56 AM</span> </p>
-						 <p class="chat_content">Hi let's meet up at ... <span>3</span> </p>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Agape Raston</name> <span> 08:56 AM</span> </p>
+						<p class="chat_content">I have understand You <span>99</span> </p>
 
+			   </div>
 				</div>
 			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/chris.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Chris</name> <span>11:56 AM</span> </p>
+						<p class="chat_content">Where is your Bugatti?<span>87</span> </p>
+
+			   </div>
+				</div>
+			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/maman.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Dear maman</name> <span>02:56 PM</span> </p>
+						<p class="chat_content">Courage...<span>1</span> </p>
+
+			   </div>
+				</div>
+			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/peter.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Peter Sirka</name> <span>01:56 AM</span> </p>
+						<p class="chat_content">It depends on you<span>56</span> </p>
+
+			   </div>
+				</div>
+			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/elon.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Elon Musk</name> <span>02:56 AM</span> </p>
+						<p class="chat_content">These 6 months can change your life... <span>65</span> </p>
+
+			   </div>
+				</div>
+			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/sonny.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Sonny Court</name> <span>12:56 AM</span> </p>
+						<p class="chat_content">Reveille le Goggins qui dors en toi ... <span>37</span> </p>
+
+			   </div>
+				</div>
+			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/bro.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Dear Brother</name> <span>00:56 AM</span> </p>
+						<p class="chat_content">C'est bien<span>3</span> </p>
+
+			   </div>
+				</div>
+			</div>
+			<div class="single_chat">
+				<div class="image_container">
+					<img src="/img/profiles/edith.jpg">
+				</div>
+				<div class="content_container">
+					<div class="content_container_inner">
+						<p class="user_name"> <name>Edith</name> <span>07:56 AM</span> </p>
+						<p class="chat_content">cc <span>13</span> </p>
+
+			   </div>
+				</div>
+			</div>
+	
 		</div>
 	</div>
 
