--- a/public/css/default_ui.css
+++ b/public/css/default_ui.css
@@ -145,6 +145,7 @@ body{
     box-sizing: border-box;
     padding-bottom: 49px;
     background-color: white;
+    overflow: scroll;
 }
 
 .single_chat{
