--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,10 @@
 <body>
 	<div data---="serviceworker__common.version__datasource:common.serviceversion"></div>
 	<div class="container">
+
+
+		<div class="black_trigger"></div>
+		<input type="text" class="search_bar">
 		<div class="lightbox">
 			<div class="lightbox_container">
 				<div class="lightbox_name">Louis Bertson</div>
