--- a/views/index.html
+++ b/views/index.html
@@ -19,8 +19,9 @@
 	<div class="container">
 
 
-		<div class="black_trigger"></div>
+		<div class="back_trigger"> <i class="fa fa-arrow-left" ></i> </div>
 		<input type="text" class="search_bar">
+
 		<div class="lightbox">
 			<div class="lightbox_container">
 				<div class="lightbox_name">Louis Bertson</div>
