--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,6 @@
 
 		<div class="back_trigger"> <i class="fa fa-arrow-left" ></i> </div>
 		<input type="text" class="search_bar">
-
 		<div class="lightbox">
 			<div class="lightbox_container">
 				<div class="lightbox_name">Louis Bertson</div>
@@ -40,7 +39,7 @@
         <div class="title_bar">
             <div class="title_top">
                 <div class="title_container">
-                    <p>Whatsapp</p>
+                    <p>SendMe</p>
                 </div>
 				<div class="icon_container">
 					<div>
@@ -233,8 +232,49 @@
 				 },400);
 			}
 		});
+		// On the change of the search bar input
 
+
+		// Code to make search bar work
+	
+	   
+		$('.icon_container div i:nth-child(1)').click(function(){	
+			$('.search_bar').css('display','block');
+			$('.back_trigger').css('display','block');
+			$('.search_bar').animate({opacity : 1 , width : '100%'},200);
+			$('.title_bar').animate({marginTop : '-90px'},600);
+			$('.search_bar').focus();
+		});
 		
+		$('body').on('change, keyup','.search_bar',function(){
+			var thisValue = $(this).val().toLowerCase();
+			var thisLength = $(this).val().length;
+			$('.single_chat').each(	function () {
+				var thisChat = $(this);
+				var username  = $(this).find('.user_name name').text().toLowerCase();
+
+
+				if(username.indexOf(thisValue) < 0){
+					thisChat.hide();
+				}else{
+					thisChat.show();
+				}
+			  });
+		 });
+		 $('.back_trigger').click(function(){
+			$('.search_bar').val('');
+			$('.search_bar').keyup();
+			$('.search_bar').animate({opacity : 0},600);
+			$('.title_bar').animate({marginTop : '0px'},600);
+			$('.back_trigger').css('display','none');
+
+			setTimeout(function(){
+				$('.search_bar').css('display','none');
+
+			},600);
+
+		});
+		 
 	});
 	</script>
 </body>
